Fix cascading font-size issue in song columns
- Remove font-size: 0.8em from .song-column p
- Paragraph elements now inherit 0.8em from parent .song-column
- Prevents double-multiplication of em units that made p elements too small

--- a/styles.css
+++ b/styles.css
@@ -258,7 +258,6 @@ h3 {
 .song-column p {
     margin: 0;
     line-height: 1.6;
-    font-size: 0.8em;
 }
 
 .song-column p:not(:last-child) {
